force-app/main/default/objects/Opportunity/fields/Account_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Created_Date__c</fullName>
    <formula>Account.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Created Date</label>
    <type>Date</type>
</CustomField>