force-app/main/default/objects/Opportunity/fields/Account_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Email__c</fullName>
    <description>Account Manager Email for Advertising API</description>
    <formula>Account_Manager__r.Email</formula>
    <label>Account_Manager_Email</label>
    <type>Text</type>
</CustomField>