force-app/main/default/objects/Opportunity/fields/Accounting_Notification_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Notification_Timestamp__c</fullName>
    <description>Field is automatically populated when Accounting is notified.</description>
    <inlineHelpText>Field is automatically populated when Accounting is notified.</inlineHelpText>
    <label>Notification Timestamp</label>
    <type>DateTime</type>
</CustomField>