force-app/main/default/objects/Opportunity/fields/Actual_spend__c.field-meta.xml
<CustomField>
    <fullName>Actual_spend__c</fullName>
    <label>Actual spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>