force-app/main/default/objects/Opportunity/fields/Ad_Units__c.field-meta.xml
<CustomField>
    <fullName>Ad_Units__c</fullName>
    <label>Ad Unit Formats</label>
    <length>100</length>
    <type>Text</type>
</CustomField>