force-app/main/default/objects/Opportunity/fields/Advertiser_Account_Id_AdManager__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_Account_Id_AdManager__c</fullName>
    <description>Advertiser Account Id from Ad Manager for Advertising API</description>
    <formula>Account.Ad_Manager_ID__c</formula>
    <label>Advertiser_Account_Id_AdManager</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>