force-app/main/default/objects/Opportunity/fields/Advertiser_Brand__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_Brand__c</fullName>
    <label>Advertiser Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>