force-app/main/default/objects/Opportunity/fields/After_5_Bus_Day_Mid_Campaign__c.field-meta.xml
<CustomField>
    <fullName>After_5_Bus_Day_Mid_Campaign__c</fullName>
    <formula>Mid_Campaign_Date__c  +
CASE(
WEEKDAY(  Mid_Campaign_Date__c  ),
5, 2 + 5,
6, 2 + 5,

5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>After 5 Bus Day Mid Campaign</label>
    <type>Date</type>
</CustomField>