force-app/main/default/objects/Opportunity/fields/Agency_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Agency_Account_ID__c</fullName>
    <formula>IF(
OR(
ISPICKVAL( Agency_Name__r.Type  , &quot;Agency&quot;),
ISPICKVAL( Agency_Name__r.Type , &quot;Agency Group&quot;)), 
 Agency_Name__r.X18_Digit_Account_ID__c ,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Account ID of the related Agency in this opportunity and only shown if the Account is an agency (Account Type = Agency)</inlineHelpText>
    <label>Agency Account ID</label>
    <type>Text</type>
</CustomField>