force-app/main/default/objects/Opportunity/fields/Agency_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Agency_Account_Owner__c</fullName>
    <formula>Agency_Name__r.Owner.FirstName &amp; &quot; &quot; &amp; Agency_Name__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Account Owner</label>
    <type>Text</type>
</CustomField>