force-app/main/default/objects/Opportunity/fields/Agency_Account_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Agency_Account_Owner_ID__c</fullName>
    <formula>Agency_Name__r.Owner.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Account Owner ID</label>
    <type>Text</type>
</CustomField>