force-app/main/default/objects/Opportunity/fields/Agency_Discount__c.field-meta.xml
<CustomField>
    <fullName>Agency_Discount__c</fullName>
    <label>Agency Discount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>10%</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>15%</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>20%</label>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1%</label>
            </value>
            <value>
                <fullName>17.5</fullName>
                <isActive>false</isActive>
                <label>17.5%</label>
            </value>
            <value>
                <fullName>5</fullName>
                <isActive>false</isActive>
                <label>5%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>