force-app/main/default/objects/Opportunity/fields/Agency_Id_AdManager__c.field-meta.xml
<CustomField>
    <fullName>Agency_Id_AdManager__c</fullName>
    <description>Agency Id from Ad Manager for Advertising API</description>
    <formula>Agency_Name__r.Ad_Manager_ID__c</formula>
    <label>Agency_Id_AdManager</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>