force-app/main/default/objects/Opportunity/fields/Agency_Id_Temp__c.field-meta.xml
<CustomField>
    <fullName>Agency_Id_Temp__c</fullName>
    <formula>CASESAFEID(Agency_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Id Temp</label>
    <type>Text</type>
</CustomField>