force-app/main/default/objects/Opportunity/fields/Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Agency_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>If the Agency Name field is entered, show the name of that Agency. Otherwise, show the error message.</description>
    <inlineHelpText>Enter the Agency Account facilitating the campaign, if applicable.  Do not include Brand direct accounts in this field</inlineHelpText>
    <label>Agency Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Advertising</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agency Opportunities</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>