force-app/main/default/objects/Opportunity/fields/Agency_Name_as_String__c.field-meta.xml
<CustomField>
    <fullName>Agency_Name_as_String__c</fullName>
    <formula>Agency_Name__r.Name</formula>
    <label>Agency Name as String</label>
    <type>Text</type>
</CustomField>