force-app/main/default/objects/Opportunity/fields/Agency_Rate__c.field-meta.xml
<CustomField>
    <fullName>Agency_Rate__c</fullName>
    <label>Agency Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>