force-app/main/default/objects/Opportunity/fields/Agency_Region__c.field-meta.xml
<CustomField>
    <fullName>Agency_Region__c</fullName>
    <description>Created for testing of region filter on billing entity</description>
    <formula>TEXT(Agency_Name__r.Account_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Region</label>
    <type>Text</type>
</CustomField>