force-app/main/default/objects/Opportunity/fields/Agency_Relations_Notes__c.field-meta.xml
<CustomField>
    <fullName>Agency_Relations_Notes__c</fullName>
    <label>Strategic Marketing Notes</label>
    <type>TextArea</type>
</CustomField>