force-app/main/default/objects/Opportunity/fields/Agency_Relations_Products__c.field-meta.xml
<CustomField>
    <fullName>Agency_Relations_Products__c</fullName>
    <label>Strategic Marketing Output</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mock</fullName>
            </value>
            <value>
                <fullName>1-Pager</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Custom Presentation</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>ABM Activation Option</fullName>
            </value>
            <value>
                <fullName>Custom Prototype</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>