force-app/main/default/objects/Opportunity/fields/All_Units_Included__c.field-meta.xml
<CustomField>
    <fullName>All_Units_Included__c</fullName>
    <description>This field displays the units included in the opportunity</description>
    <label>All Units Included</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>6-sec Canvas Video</fullName>
            </value>
            <value>
                <fullName>Added Value</fullName>
            </value>
            <value>
                <fullName>Desktop Outstream Skin</fullName>
            </value>
            <value>
                <fullName>Desktop Scroller</fullName>
            </value>
            <value>
                <fullName>Desktop Skin</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>GumGum Native</fullName>
            </value>
            <value>
                <fullName>GumGum Standard</fullName>
            </value>
            <value>
                <fullName>GumGum Stories</fullName>
            </value>
            <value>
                <fullName>Hangtime</fullName>
            </value>
            <value>
                <fullName>Hoverboard</fullName>
            </value>
            <value>
                <fullName>In-Article Shoppable</fullName>
            </value>
            <value>
                <fullName>In-Article Video</fullName>
            </value>
            <value>
                <fullName>In-Content Video - No Banner</fullName>
            </value>
            <value>
                <fullName>In-Game</fullName>
            </value>
            <value>
                <fullName>In-Image</fullName>
            </value>
            <value>
                <fullName>In-Image/In-Screen Blend</fullName>
            </value>
            <value>
                <fullName>In-Image 6-Second Canvas Video - No Banner</fullName>
            </value>
            <value>
                <fullName>In-Image 728x90</fullName>
            </value>
            <value>
                <fullName>In-Image Animated</fullName>
            </value>
            <value>
                <fullName>In-Image Canvas</fullName>
            </value>
            <value>
                <fullName>In-Image Canvas - Interactive</fullName>
            </value>
            <value>
                <fullName>In-image Embedded Video</fullName>
                <label>In-Image Embedded Video</label>
            </value>
            <value>
                <fullName>In-Image Expandable</fullName>
            </value>
            <value>
                <fullName>In-Image Frame</fullName>
            </value>
            <value>
                <fullName>In-Image Frame - Interactive</fullName>
            </value>
            <value>
                <fullName>In-Image - Interactive</fullName>
            </value>
            <value>
                <fullName>Inline Billboard</fullName>
            </value>
            <value>
                <fullName>In-Screen</fullName>
            </value>
            <value>
                <fullName>In-Screen Animated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>