force-app/main/default/objects/Opportunity/fields/Always_On__c.field-meta.xml
<CustomField>
    <fullName>Always_On__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Always On</label>
    <type>Checkbox</type>
</CustomField>