force-app/main/default/objects/Opportunity/fields/AM_Approval__c.field-meta.xml
<CustomField>
    <fullName>AM_Approval__c</fullName>
    <inlineHelpText>Indicates whether or not the products have been approved by the AM.</inlineHelpText>
    <label>AM Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
                <default>true</default>
                <label>Not Submitted</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Requires Re-submission</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>