force-app/main/default/objects/Opportunity/fields/Amount_Different_From_Projected__c.field-meta.xml
<CustomField>
    <fullName>Amount_Different_From_Projected__c</fullName>
    <formula>ABS(Round(Amount, 0) - Round(Projected_Amount__c, 0)) &gt; 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Different From Projected</label>
    <type>Checkbox</type>
</CustomField>