force-app/main/default/objects/Opportunity/fields/Amount_Equals_Sum_of_Products__c.field-meta.xml
<CustomField>
    <fullName>Amount_Equals_Sum_of_Products__c</fullName>
    <formula>ABS(Round(Amount, 0) - Round(Total_Ordered_Amount_Check_Figure__c, 0)) &lt; 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Equals Sum of Products</label>
    <type>Checkbox</type>
</CustomField>