force-app/main/default/objects/Opportunity/fields/Amount_for_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Amount_for_Email_Subject__c</fullName>
    <formula>TEXT(CurrencyIsoCode) &amp; &quot; &quot; &amp;
IF(
	Amount &gt;= 1000000,
	TEXT(FLOOR(Amount / 1000000)) &amp; &quot;,&quot;,
	&quot;&quot;) &amp;
	IF(
	Amount &gt;= 1000,
	RIGHT(TEXT(FLOOR(Amount / 1000)), 3) &amp; &quot;,&quot;,
	&quot;&quot;) &amp;
	RIGHT(TEXT(FLOOR(Amount)), 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount for Email Subject</label>
    <type>Text</type>
</CustomField>