force-app/main/default/objects/Opportunity/fields/Annual_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Annual_Contract_Value__c</fullName>
    <formula>Amount/  Number_of_Years__c</formula>
    <label>Annual Contract Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>