force-app/main/default/objects/Opportunity/fields/Approval_Status_Custom_Creative_Ad__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status_Custom_Creative_Ad__c</fullName>
    <description>This field displays the custom creative status</description>
    <label>Custom Creative Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Re-Submitted</fullName>
            </value>
            <value>
                <fullName>Approved by Product Team</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>