force-app/main/default/objects/Opportunity/fields/Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>Approval_Type__c</fullName>
    <inlineHelpText>Custom Creative-Only are not managed in Salesforce but please fill the field &quot;Custom Creative&quot; to flag this oppty as a custom creative campaign for visibility.</inlineHelpText>
    <label>Approval Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expedite-Only</fullName>
            </value>
            <value>
                <fullName>Exception-Only</fullName>
            </value>
            <value>
                <fullName>Expedite &amp; Exception</fullName>
            </value>
            <value>
                <fullName>Expedite, Exception &amp; Custom Creative</fullName>
            </value>
            <value>
                <fullName>Expedite &amp; Custom Creative</fullName>
            </value>
            <value>
                <fullName>Exception &amp; Custom Creative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>