force-app/main/default/objects/Opportunity/fields/AR_Member__c.field-meta.xml
<CustomField>
    <fullName>AR_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Strategic Growth Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities7</relationshipName>
    <type>Lookup</type>
</CustomField>