force-app/main/default/objects/Opportunity/fields/Attention__c.field-meta.xml
<CustomField>
    <fullName>Attention__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Attention sold on this Verity Opportunity</inlineHelpText>
    <label>Attention Targeting</label>
    <type>Checkbox</type>
</CustomField>