force-app/main/default/objects/Opportunity/fields/Average_Pipeline_Stage_Duration__c.field-meta.xml
<CustomField>
    <fullName>Average_Pipeline_Stage_Duration__c</fullName>
    <formula>Total_Pipeline_Age__c /  Number_of_Stages_Reached__c</formula>
    <label>Average Pipeline Stage Duration</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>