force-app/main/default/objects/Opportunity/fields/Barter_Agency__c.field-meta.xml
<CustomField>
    <fullName>Barter_Agency__c</fullName>
    <inlineHelpText>Choose the applicable agency associated with the barter agreement.  Should only be chosen if &apos;Type of Barter Agreement&apos; is populated</inlineHelpText>
    <label>Barter Agency Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Agyle</fullName>
            </value>
            <value>
                <fullName>Astus</fullName>
            </value>
            <value>
                <fullName>Evergreen</fullName>
            </value>
            <value>
                <fullName>ICON</fullName>
            </value>
            <value>
                <fullName>Miroma</fullName>
            </value>
            <value>
                <fullName>NYIAX</fullName>
            </value>
            <value>
                <fullName>Orion</fullName>
            </value>
            <value>
                <fullName>Fortitude Trading Ltd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>