force-app/main/default/objects/Opportunity/fields/Barter_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Barter_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Barter Agreement?</label>
    <type>Checkbox</type>
</CustomField>