force-app/main/default/objects/Opportunity/fields/Barter_Trading_Deal__c.field-meta.xml
<CustomField>
    <fullName>Barter_Trading_Deal__c</fullName>
    <inlineHelpText>Choose the applicable Trading / Barter deal. Values are populated based on the Opportunity Region selected.</inlineHelpText>
    <label>Barter / Trading Deal</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Opportunity_Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APAC - APEX</fullName>
            </value>
            <value>
                <fullName>APAC - Bohemia</fullName>
            </value>
            <value>
                <fullName>APAC - DAN - SEA</fullName>
            </value>
            <value>
                <fullName>APAC - GroupM - SEA</fullName>
            </value>
            <value>
                <fullName>APAC - Havas</fullName>
            </value>
            <value>
                <fullName>APAC - IPG - AU</fullName>
            </value>
            <value>
                <fullName>APAC - IPG - SEA</fullName>
            </value>
            <value>
                <fullName>APAC - OMG</fullName>
            </value>
            <value>
                <fullName>APAC - OMG - SEA</fullName>
            </value>
            <value>
                <fullName>APAC - Omnet</fullName>
            </value>
            <value>
                <fullName>APAC - Saatchi</fullName>
            </value>
            <value>
                <fullName>APAC - Saatchi - SEA</fullName>
            </value>
            <value>
                <fullName>BE - Blue2Purple</fullName>
            </value>
            <value>
                <fullName>BE - GroupM</fullName>
            </value>
            <value>
                <fullName>BE - IPG</fullName>
            </value>
            <value>
                <fullName>BE - Publicis</fullName>
            </value>
            <value>
                <fullName>BE - Space</fullName>
            </value>
            <value>
                <fullName>BE - Zigt</fullName>
            </value>
            <value>
                <fullName>CA - APEX</fullName>
            </value>
            <value>
                <fullName>CA - GroupM GMI</fullName>
            </value>
            <value>
                <fullName>CA - Orion</fullName>
            </value>
            <value>
                <fullName>DE - Dentsu</fullName>
            </value>
            <value>
                <fullName>DE - Fischer</fullName>
            </value>
            <value>
                <fullName>DE - GroupM</fullName>
            </value>
            <value>
                <fullName>DE - OMD</fullName>
            </value>
            <value>
                <fullName>Intl. - Adidas</fullName>
            </value>
            <value>
                <fullName>Intl. - Aramco</fullName>
            </value>
            <value>
                <fullName>Intl. - CoE</fullName>
            </value>
            <value>
                <fullName>Intl. - Dell</fullName>
            </value>
            <value>
                <fullName>Intl. - Merkle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>