force-app/main/default/objects/Opportunity/fields/Billing_Entity__c.field-meta.xml
<CustomField>
    <fullName>Billing_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account where invoices should be sent to (TDG).  Sync with Netsuite.</description>
    <inlineHelpText>The Billing Entity account where invoices should be sent to.</inlineHelpText>
    <label>Billing Entity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Billing Entity</value>
        </filterItems>
        <filterItems>
            <field>Account.Account_Region_Country__c</field>
            <operation>equals</operation>
            <valueField>$Source.Opportunity_Region_Country__c</valueField>
        </filterItems>
        <infoMessage>Select the Billing Entity Account</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Billing Entity)</relationshipLabel>
    <relationshipName>Account_Billing_Entity</relationshipName>
    <type>Lookup</type>
</CustomField>