force-app/main/default/objects/Opportunity/fields/Billing_Entity_Region__c.field-meta.xml
<CustomField>
    <fullName>Billing_Entity_Region__c</fullName>
    <formula>TEXT( Billing_Entity__r.Account_Region__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Entity Region</label>
    <type>Text</type>
</CustomField>