force-app/main/default/objects/Opportunity/fields/Billing_Provider__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider__c</fullName>
    <label>Billing Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Atlas</fullName>
            </value>
            <value>
                <fullName>DCM</fullName>
            </value>
            <value>
                <fullName>DoubleVerify</fullName>
            </value>
            <value>
                <fullName>Flashtalking</fullName>
            </value>
            <value>
                <fullName>GumGum</fullName>
            </value>
            <value>
                <fullName>IAS</fullName>
            </value>
            <value>
                <fullName>Innovid</fullName>
            </value>
            <value>
                <fullName>MediaPlex</fullName>
            </value>
            <value>
                <fullName>MOAT</fullName>
            </value>
            <value>
                <fullName>Nielsen</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pointroll</fullName>
            </value>
            <value>
                <fullName>Sizmek</fullName>
            </value>
            <value>
                <fullName>Smart AdServer</fullName>
            </value>
            <value>
                <fullName>TravelSpike</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>