force-app/main/default/objects/Opportunity/fields/Blocker__c.field-meta.xml
<CustomField>
    <fullName>Blocker__c</fullName>
    <label>Blocker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ease of Actionable Data</fullName>
            </value>
            <value>
                <fullName>Dashboard UI</fullName>
            </value>
            <value>
                <fullName>Ease of Integration</fullName>
            </value>
            <value>
                <fullName>Data Accuracy</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Brand Safety vs. IAS</fullName>
            </value>
            <value>
                <fullName>Works with Competitor</fullName>
            </value>
            <value>
                <fullName>CPM/Pricing</fullName>
            </value>
            <value>
                <fullName>Integration Issues</fullName>
            </value>
            <value>
                <fullName>User Experience</fullName>
            </value>
            <value>
                <fullName>Product Fit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>