force-app/main/default/objects/Opportunity/fields/Blocker_Other_Details__c.field-meta.xml
<CustomField>
    <fullName>Blocker_Other_Details__c</fullName>
    <label>Blocker- Other Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>