force-app/main/default/objects/Opportunity/fields/Booked_Amount__c.field-meta.xml
<CustomField>
    <fullName>Booked_Amount__c</fullName>
    <formula>IF( ISPICKVAL( StageName , &quot;Closed/Won&quot;) , Amount * 0.1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booked Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>