force-app/main/default/objects/Opportunity/fields/Booked_Value__c.field-meta.xml
<CustomField>
    <fullName>Booked_Value__c</fullName>
    <formula>Amount *  Finance_Pledge_Probability__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booked Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>